docs: add listOpenings documentation
