# docs/swagger.yaml
@@ -42,6 +42,17 @@ definitions:
       success:
         type: boolean
     type: object
+  handler.ListOpeningsResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/schemas.OpeningResponse'
+        type: array
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
   handler.ShowOpeningResponse:
     properties:
       data:
@@ -172,6 +183,29 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: CreateOpeningHandler
+      tags:
+      - Openings
+  /openings:
+    get:
+      consumes:
+      - application/json
+      description: List all jobs openings
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ListOpeningsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: ListOpeningsHandler
       tags:
       - Openings
 swagger: "2.0"
